// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`background color of spaces cyan for inchanged (expanded) 1`] = `
"<red>- Expected</>
+ Received</>

<dim>  <div></>
+   <p></>
<cyan>      <span></>
<cyan>        following string consists of a space:</>
<cyan>        <inverse> </></>
<cyan>        <inverse> </>line has preceding space only</>
<cyan>        <inverse> </>line has both preceding and following space<inverse> </></>
<cyan>        line has following space only<inverse> </></>
<cyan>      </span></>
+   </p></>
<dim>  </div></>"
`;

exports[`background color of spaces green for removed (expanded) 1`] = `
"<red>- Expected</>
+ Received</>

<dim>  <div></>
<dim>    <span></>
<red>-     following string consists of a space:</>
<red>-     <inverse> </></>
<red>-     <inverse> </>line has preceding space only</>
<red>-     <inverse> </>line has both preceding and following space<inverse> </></>
<red>-     line has following space only<inverse> </></>
+     </>
<dim>    </span></>
<dim>  </div></>"
`;

exports[`background color of spaces red for added (expanded) 1`] = `
"<red>- Expected</>
+ Received</>

<dim>  <div></>
<dim>    <span></>
<red>-     </>
+     following string consists of a space:</>
+     <inverse> </></>
+     <inverse> </>line has preceding space only</>
+     <inverse> </>line has both preceding and following space<inverse> </></>
+     line has following space only<inverse> </></>
<dim>    </span></>
<dim>  </div></>"
`;

exports[`background color of spaces yellow for unchanged (expanded) 1`] = `
"<red>- Expected</>
+ Received</>

<dim>  <div></>
<red>-   <span></>
+   <p></>
<dim>      following string consists of a space:</>
<dim>      <bgYellow> </></>
<dim>      <bgYellow> </>line has preceding space only</>
<dim>      <bgYellow> </>line has both preceding and following space<bgYellow> </></>
<dim>      line has following space only<bgYellow> </></>
<red>-   </span></>
+   </p></>
<dim>  </div></>"
`;

exports[`collapses big diffs to patch format 1`] = `
"<red>- Expected</>
+ Received</>

<yellow>@@ -6,9 +6,9 @@</>
<dim>      4,</>
<dim>      5,</>
<dim>      6,</>
<dim>      7,</>
<dim>      8,</>
<red>-     9,</>
<dim>      10,</>
+     9,</>
<dim>    ],</>
<dim>  }</>"
`;

exports[`color of text (expanded) 1`] = `
"<red>- Expected</>
+ Received</>

<dim>  Object {</>
<dim>    \\"searching\\": \\"\\",</>
<red>-   \\"sorting\\": Object {</>
+   \\"sorting\\": Array [</>
+     Object {</>
<cyan>        \\"descending\\": false,</>
<cyan>        \\"fieldKey\\": \\"what\\",</>
<cyan>      },</>
+   ],</>
<dim>  }</>"
`;

exports[`context number of lines: -1 (5 default) 1`] = `
"<red>- Expected</>
+ Received</>

<yellow>@@ -6,9 +6,9 @@</>
<dim>      4,</>
<dim>      5,</>
<dim>      6,</>
<dim>      7,</>
<dim>      8,</>
<red>-     9,</>
<dim>      10,</>
+     9,</>
<dim>    ],</>
<dim>  }</>"
`;

exports[`context number of lines: 0  1`] = `
"<red>- Expected</>
+ Received</>

<yellow>@@ -11,1 +11,0 @@</>
<red>-     9,</>
<yellow>@@ -13,0 +12,1 @@</>
+     9,</>"
`;

exports[`context number of lines: 1  1`] = `
"<red>- Expected</>
+ Received</>

<yellow>@@ -10,4 +10,4 @@</>
<dim>      8,</>
<red>-     9,</>
<dim>      10,</>
+     9,</>
<dim>    ],</>"
`;

exports[`context number of lines: 2  1`] = `
"<red>- Expected</>
+ Received</>

<yellow>@@ -9,6 +9,6 @@</>
<dim>      7,</>
<dim>      8,</>
<red>-     9,</>
<dim>      10,</>
+     9,</>
<dim>    ],</>
<dim>  }</>"
`;

exports[`context number of lines: null (5 default) 1`] = `
"<red>- Expected</>
+ Received</>

<yellow>@@ -6,9 +6,9 @@</>
<dim>      4,</>
<dim>      5,</>
<dim>      6,</>
<dim>      7,</>
<dim>      8,</>
<red>-     9,</>
<dim>      10,</>
+     9,</>
<dim>    ],</>
<dim>  }</>"
`;

exports[`falls back to not call toJSON if it throws and then objects have differences 1`] = `
"<red>- Expected</>
+ Received</>

<dim>  Object {</>
<red>-   \\"line\\": 1,</>
+   \\"line\\": 2,</>
<dim>    \\"toJSON\\": [Function toJSON],</>
<dim>  }</>"
`;

exports[`falls back to not call toJSON if serialization has no differences but then objects have differences 1`] = `
"<dim>Compared values serialize to the same structure.</>
<dim>Printing internal object structure without calling \`toJSON\` instead.</>

<red>- Expected</>
+ Received</>

<dim>  Object {</>
<red>-   \\"line\\": 1,</>
+   \\"line\\": 2,</>
<dim>    \\"toJSON\\": [Function toJSON],</>
<dim>  }</>"
`;

exports[`highlight only the last in odd length of leading spaces (expanded) 1`] = `
"<red>- Expected</>
+ Received</>

<dim>  <pre></>
<red>-   attributes.reduce(function (props, attribute) {</>
<red>-   <inverse> </>props[attribute.name] = attribute.value;</>
+   attributes.reduce((props, {name, value}) =&gt; {</>
+   props[name] = value;</>
<dim>    return props;</>
<red>- <inverse> </>}, {});</>
+ }, {});</>
<dim>  </pre></>"
`;

exports[`oneline strings 1`] = `
"<red>- Expected</>
+ Received</>

<red>- ab</>
+ aa</>"
`;

exports[`oneline strings 2`] = `
"<red>- Expected</>
+ Received</>

<red>- 123456789</>
+ 234567890</>"
`;

exports[`oneline strings 3`] = `
"<red>- Expected</>
+ Received</>

<red>- oneline</>
+ multi</>
+ line</>"
`;

exports[`oneline strings 4`] = `
"<red>- Expected</>
+ Received</>

<red>- multi</>
<red>- line</>
+ oneline</>"
`;
